--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,15 @@
-.column {
+.column1 {
   width: 300px;
   float: left;
+  background-color: red;
+}
+.column2 {
+  width: 300px;
+  float: left;
+  background-color: green;
+}
+.column3 {
+  width: 300px;
+  float: left;
+  background-color: blue;
 }
